--- a/public/404.html
+++ b/public/404.html
@@ -12,11 +12,6 @@
   </head>
   <body>
     <h1>404<br />Not found<br />🙅</h1>
-    <a
-      class="btn"
-      href="https://ryoheinan.github.io"
-      rel="noopener noreferrer nofollow"
-      >Back to Home</a
-    >
+    <a href="/" rel="noopener noreferrer nofollow">Back to Home</a>
   </body>
 </html>
