--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Not found | ryoheinan.github.io</title>
-    <link rel="stylesheet" href="err.style.css" />
+    <link rel="stylesheet" href="/err.style.css" />
   </head>
   <body>
     <h1>404<br />Not found<br />🙅</h1>
