Change site name

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ryoheinan.github.io</title>
+    <title>ryohei.dev</title>
     <meta name="description" content="Hi there 👋 I'm Ryohei Nagasawa" />
-    <meta property="og:title" content="ryoheinan.github.io" />
+    <meta property="og:title" content="ryohei.dev" />
     <meta property="og:description" content="Hi there 👋 I'm Ryohei Nagasawa" />
-    <meta property="og:url" content="https://ryoheinan.github.io" />
-    <meta property="og:image" content="https://ryoheinan.github.io/share.jpg" />
+    <meta property="og:url" content="https://ryohei.dev" />
+    <meta property="og:image" content="https://ryohei.dev/share.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
