--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Not found | ryoheinan.github.io</title>
+    <title>404 Not found | ryohei.dev</title>
     <link rel="stylesheet" href="/err.style.css" />
   </head>
   <body>
