Add support for system color mode

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://ryohei.dev/share.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
-  <body>
+  <body data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
