chore: Change rel values

--- a/public/404.html
+++ b/public/404.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>404<br />Not found<br />🙅</h1>
-    <a href="/" rel="noopener noreferrer nofollow">Back to Home</a>
+    <a href="/">Back to Home</a>
   </body>
 </html>
