Make webfont config simpler

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta property="og:url" content="https://ryohei.dev" />
     <meta property="og:image" content="https://ryohei.dev/share.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
     <div id="app"></div>
