Configure vite-plugin-html

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <body data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <%- injectScript %>
   </body>
 </html>
