chore: Add hatena config

--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <meta name="Hatena::Bookmark" content="nocomment" />
     <title>404 Not found | ryohei.dev</title>
     <link rel="stylesheet" href="/err.style.css" />
   </head>
