--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:url" content="https://ryohei.dev" />
     <meta property="og:image" content="https://ryohei.dev/share.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="Hatena::Bookmark" content="nocomment" />
+    <link rel="author" href="http://www.hatena.ne.jp/ryoheinan/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
